--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -32,8 +32,9 @@
 
 <div class="about-me">
     <div class="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
+        <button class="carousel-control prev">&#10094;</button>
+        <div class="carousel-track">
+            <div class="carousel-item">
                 <img src="{% static 'test_app1/images/serf1.jpg' %}" alt="Фото 1">
             </div>
             <div class="carousel-item">
@@ -42,20 +43,22 @@
             <div class="carousel-item">
                 <img src="{% static 'test_app1/images/serf3.jpg' %}" alt="Фото 3">
             </div>
-            <!-- Добавьте больше фотографий по аналогии -->
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/serf4.jpg' %}" alt="Фото 4">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/serf5.jpg' %}" alt="Фото 5">
+            </div>
         </div>
-        <!-- Стрелки для навигации -->
-        <button class="carousel-control prev">&#10094;</button>
         <button class="carousel-control next">&#10095;</button>
-        <!-- Индикаторы (точки) -->
         <div class="carousel-indicators">
             <span class="indicator active"></span>
             <span class="indicator"></span>
             <span class="indicator"></span>
-            <!-- Добавьте больше точек по количеству фотографий -->
         </div>
     </div>
 </div>
+
 
 <script src="{% static 'js/slider.js' %}"></script>
 {% endblock %}
