--- a/sitewife/test_app1/static/test_app1/CSS/styles.css
+++ b/sitewife/test_app1/static/test_app1/CSS/styles.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Poiret One', sans-serif;
     line-height: 1.6;
     color: #333;
-    background: linear-gradient(#4a4847, #c4c1c0) fixed;
+    background: linear-gradient(#D8C3A5, #EAE7DC) fixed;
     margin: 0;
     padding: 0;
 }
@@ -20,11 +20,18 @@ header {
     background: #4a4847;
     color: white;
     padding: 10px 15px;
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header h1 {
     font-size: 2rem;
+    margin: 0;
+}
+
+header .phone {
+    font-size: 1.5rem;
 }
 
 /* Стили для навигации */
@@ -90,12 +97,12 @@ footer {
 .about-me {
     opacity: 0; /* Изначально скрываем блоки */
     transform: translateY(50px); /* Смещение вниз */
-    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+    transition: opacity 0.5s ease-out, transform 0.5s ease-out;
     display: flex;
     align-items: center;
     gap: 20px;
     margin: 40px auto; /* Добавляем auto для центрирования */
-    max-width: 80%; /* Ограничиваем ширину */
+    max-width: 90%; /* Ограничиваем ширину */
     padding: 20px; /* Добавляем отступы */
     background: white; /* Оставляем белый фон */
     border-radius: 15px;
@@ -106,6 +113,8 @@ footer {
     opacity: 1;
     transform: translateY(0);
 }
+
+
 
 .profile-photo {
     width: 400px; /* Сделаем чуть меньше */
@@ -160,7 +169,7 @@ footer {
 
 .carousel {
     position: relative;
-    max-width: 800px;
+    max-width: 550px;
     margin: 20px auto;
     overflow: hidden;
     border-radius: 10px;
@@ -293,7 +302,7 @@ footer {
 
 .social-links a:hover {
     transform: scale(1.1);    /* Увеличиваем размер иконки при наведении */
-    background-color: #4caf50; /* Меняем фон при наведении */
+    background-color: #D8C3A5; /* Меняем фон при наведении */
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2); /* Добавляем тень */
     border-radius: 10px;       /* Увеличиваем радиус углов при наведении */
 }
