--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 
+
 <div class="about-me">
     <img src="{% static 'test_app1/images/main3.jpg' %}" alt="Фотография психолога" class="profile-photo">
     <div class="description">
@@ -29,6 +30,8 @@
         <p>Работаю по таким методикам как:</p>
     </div>
 </div>
+
+<script src="{% static 'js/slider.js' %}"></script>
 
 <div class="about-me">
     <div class="carousel">
@@ -59,6 +62,97 @@
     </div>
 </div>
 
-
 <script src="{% static 'js/slider.js' %}"></script>
+
+<div class="about-me">
+    <div class="carousel">
+        <button class="carousel-control prev">&#10094;</button>
+        <div class="carousel-track">
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like1.jpg' %}" alt="Фото 1">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like2.jpg' %}" alt="Фото 2">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like3.jpg' %}" alt="Фото 3">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like4.jpg' %}" alt="Фото 4">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like5.jpg' %}" alt="Фото 5">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like6.jpg' %}" alt="Фото 6">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like7.jpg' %}" alt="Фото 7">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like8.jpg' %}" alt="Фото 8">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like9.jpg' %}" alt="Фото 9">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like10.jpg' %}" alt="Фото 10">
+            </div>
+                        <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like11.jpg' %}" alt="Фото 11">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like12.jpg' %}" alt="Фото 12">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like13.jpg' %}" alt="Фото 13">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like14.jpg' %}" alt="Фото 14">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/like15.jpg' %}" alt="Фото 15">
+            </div>
+        </div>
+        <button class="carousel-control next">&#10095;</button>
+        <div class="carousel-indicators">
+            <span class="indicator active"></span>
+            <span class="indicator"></span>
+            <span class="indicator"></span>
+        </div>
+    </div>
+</div>
+
+<script src="https://api-maps.yandex.ru/2.1/?apikey=0a049687-d13b-41c1-b03e-866902898911&lang=ru_RU" type="text/javascript"></script>
+<script src="{% static 'js/icon_customImage.js' %}"></script>
+
+
+<div class="contacts">
+    <h2>Мои контакты</h2>
+
+        <!-- Секция карты -->
+        <div class="map-container">
+            <div id="map" class="map"></div>
+        </div>
+
+        <div class="contact-info">
+            <p>Адрес: г. Минск, ул. Якуба Колоса, 37</p>
+            <p>Телефон: +375 29 6236583</p>
+            <p>Email: <a href="mailto:email@example.com">email@example.com</a></p>
+        </div>
+</div>
+
+ <div class="social-links">
+     <h2>Так же со смной можно связаться через социальыне сети</h2>
+     <a href="https://t.me/+375296236583" target="_blank">
+         <img src="{% static 'test_app1/images/telegram-ico.png' %}" alt="Telegram">
+     </a>
+     <a href="viber://chat?number=%2B375296236583" target="_blank">
+         <img src="{% static 'test_app1/images/viber-ico.png' %}" alt="Viber">
+     </a>
+     <a href="https://www.instagram.com/family_psychologist_karina/" target="_blank">
+         <img src="{% static 'test_app1/images/instagram-ico.png' %}" alt="Instagram">
+     </a>
+ </div>
+
 {% endblock %}
