--- a/sitewife/templates/base.html
+++ b/sitewife/templates/base.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link type="text/css" href="{% static 'test_app1/CSS/styles.css' %}" rel="stylesheet" />
+     <link rel="icon" href="{% static 'test_app1/images/favicon.ico' %}" type="image/x-icon">
 </head>
 <body>
     <header>
