--- a/sitewife/test_app1/templates/test_app1/home.html
+++ b/sitewife/test_app1/templates/test_app1/home.html
@@ -40,6 +40,9 @@
         <button class="carousel-control prev">&#10094;</button>
         <div class="carousel-track">
             <div class="carousel-item">
+                <img src="{% static 'test_app1/images/diplom.jpg' %}" alt="Фото">
+            </div>
+            <div class="carousel-item">
                 <img src="{% static 'test_app1/images/serf1.jpg' %}" alt="Фото 1">
             </div>
             <div class="carousel-item">
@@ -53,6 +56,18 @@
             </div>
             <div class="carousel-item">
                 <img src="{% static 'test_app1/images/serf5.jpg' %}" alt="Фото 5">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/serf7.jpg' %}" alt="Фото 6">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/serf8.jpg' %}" alt="Фото 7">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/serf9.jpg' %}" alt="Фото 8">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'test_app1/images/serf10.jpg' %}" alt="Фото 9">
             </div>
         </div>
         <button class="carousel-control next">&#10095;</button>
@@ -69,49 +84,28 @@
         <button class="carousel-control prev">&#10094;</button>
         <div class="carousel-track">
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like1.jpg' %}" alt="Фото 1">
+                <img src="{% static 'test_app1/images/like21.jpg' %}" alt="Фото 1">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like2.jpg' %}" alt="Фото 2">
+                <img src="{% static 'test_app1/images/like22.jpg' %}" alt="Фото 2">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like3.jpg' %}" alt="Фото 3">
+                <img src="{% static 'test_app1/images/like23.jpg' %}" alt="Фото 3">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like4.jpg' %}" alt="Фото 4">
+                <img src="{% static 'test_app1/images/like24.jpg' %}" alt="Фото 4">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like5.jpg' %}" alt="Фото 5">
+                <img src="{% static 'test_app1/images/like25.jpg' %}" alt="Фото 5">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like6.jpg' %}" alt="Фото 6">
+                <img src="{% static 'test_app1/images/like26.jpg' %}" alt="Фото 6">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like7.jpg' %}" alt="Фото 7">
+                <img src="{% static 'test_app1/images/like27.jpg' %}" alt="Фото 7">
             </div>
             <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like8.jpg' %}" alt="Фото 8">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like9.jpg' %}" alt="Фото 9">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like10.jpg' %}" alt="Фото 10">
-            </div>
-                        <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like11.jpg' %}" alt="Фото 11">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like12.jpg' %}" alt="Фото 12">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like13.jpg' %}" alt="Фото 13">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like14.jpg' %}" alt="Фото 14">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'test_app1/images/like15.jpg' %}" alt="Фото 15">
+                <img src="{% static 'test_app1/images/like28.jpg' %}" alt="Фото 8">
             </div>
         </div>
         <button class="carousel-control next">&#10095;</button>
